@@ -1,5 +1,7 @@
 2009-12-10  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclBasic.c: small cleanup
+
 	* generic/tclExecute.c: fix panic in http11.test caused by buggy
 	earlier commits in coroutine management.
 
